--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,8 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: 'Montserrat', sans-serif;
   background-color: #0c0f16;
   /* Neutral dark background for desktop */
